--- a/vscode-config/settings.json
+++ b/vscode-config/settings.json
@@ -77,7 +77,9 @@
             "commands": [
                 "editor.action.formatDocument"
             ]
-        }
+        },
+        { "before": [";"], "after": [":"] },
+        { "before": [";"], "after": [":"] }
     ],
     "editor.minimap.enabled": false,
     "makefile.configureOnOpen": true,
