update the dotfiles with display

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,8 +9,22 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # semantic “cop” operator
 bind-key -T root User1 {
+  display-message "cop invoked"
   copy-mode -e
   send-keys -X previous-prompt
-  send-keys -X select-line
+  send-keys -X begin-selection
   send-keys -X next-prompt
+  send-keys -X copy-pipe-and-cancel "xclip -selection clipboard"
 }
+
+# binding the shortcut prefix t to the cop operator
+unbind-key -T prefix t
+bind-key -T prefix t send-keys -K User1
+
+# make sourcing easier
+bind-key r source-file ~/.tmux.conf \; display-message "tmux reloaded"
+
+### adding the VIM keys to copy mode
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+
